# remotecord-app

./: .env.local.example  .eslintrc.json  .gitignore  LICENSE  README.md  biome.json  index.html  latest.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: deploy.yml  publish.yml
src/: env.config.ts  index.css  main.tsx
src-tauri/: 2  Cargo.toml  relic.conf  setup-keyvault-permissions.ps1  tauri.conf-backup.json  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  keystroke.rs  lib.rs  main.rs  screenshot.rs  tray.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(pages)/: layout.tsx  page.tsx
src/app/(pages)/auth/: page.tsx
src/app/(pages)/auth/components/: Auth.tsx  Password.tsx
src/app/(pages)/auth/hooks/: useAuth.tsx
src/app/(pages)/logs/: page.tsx
src/app/auth/: page.tsx
src/app/auth/components/form/: SignUp.tsx  Signin.tsx
src/client/: HttpClient.ts  WsClient.ts  updaterClient.ts
src/components/: LayoutSession.tsx  Macros.tsx  Navbar.tsx  Screenshot.tsx  Shell.tsx  TestComponents.tsx  TestReq.tsx  app-sidebar.tsx  app.tsx  osInfo.tsx
src/components/auth/: Auth.tsx
src/components/auth/form/: SignUp.tsx  Signin.tsx  validation.ts
src/components/common/config/: ConfigCard.tsx  ConfigMenu.tsx
src/components/common/config/hooks/: useConnection.tsx  useFolderPicker.tsx
src/components/common/navbar/: Navbar.tsx  TitleBar.tsx  TitleBarButton.tsx
src/components/config/: ConfigCard.tsx  ConfigMenu.tsx  DefaultConfig.tsx
src/components/home/: CodeClient.tsx
src/components/home/friends/: FriendCard.tsx  FriendsCard.tsx
src/components/logs/table/: data-table.tsx  table-columns.tsx
src/components/modals/: AddFriendModal.tsx  ConnectionModal.tsx  SoundModal.tsx
src/components/navbar/: Navbar.tsx  TitleBar.tsx  TitleBarButton.tsx
src/components/page/ConnectionModal/: ConnectionModalAnimation.tsx
src/components/test-components/: LayoutSession.tsx  Screenshot.tsx  Shell.tsx  TestReq.tsx  sendNotification.tsx  sendRequest.tsx  showDialog.tsx
src/components/ui/: AnimatedLightWebSocket.tsx  Button.tsx  dialog.tsx  dialogConnection.tsx  dialogWithoutX.tsx  input.tsx  progress.tsx  sheet.tsx  sidebar.tsx  slider.tsx  toast.tsx  toaster-expand.tsx  toaster.tsx  tooltip.tsx
src/contexts/: DeppLinkProvider.tsx  DownloadingFile.tsx  KeyContext.tsx  LogContext.tsx  Providers.tsx  SessionContext.tsx  SupabaseContext.tsx  WsApplication.tsx  WsApplicationContext.tsx  WsContext.tsx  loggedProvider.tsx
src/features/friends/: FriendCard.tsx  FriendsCard.tsx
src/features/friends/hooks/: useFriends.tsx
src/features/home/components/: CodeClient.tsx
src/features/logs/components/: LogsTable.tsx
src/features/logs/components/table/: data-table.tsx  table-columns.tsx
src/features/modals/: AddFriendModal.tsx  ConnectionModal.tsx
src/features/modals/ConnectedModal/: AnimatedLightWebSocket.tsx  ConnectionModalAnimation.tsx
src/features/sounds/components/: SoundModal.tsx  Sounds.tsx
src/features/sounds/hooks/: useVolumes.tsx
src/features/webcam/hooks/: useWebcams.tsx
src/features/websocket/: DownloadingFile.tsx  WsApplication.tsx  WsClient.tsx  index.ts  ws-types.d.ts  ws.service.ts
src/features/websocket/hooks/: useWsClient.tsx
src/features/websocket/services/: commands.service.ts  files.service.ts  index.ts  os.service.ts  webcam.service.ts
src/hooks/: use-sounds.tsx  use-useragent.tsx  useApi.tsx  useAuth.tsx  useConnection.tsx  useDebounceSync.tsx  useFetchAndLoad.tsx  useFolderPicker.tsx  useFriends.tsx  useSession.tsx  useUserInfo.tsx  useWsClient.tsx
src/hooks/auth/: useAuth.tsx
src/hooks/authentication/: index.ts  useAuth.tsx  useSession.tsx  useUserInfo.tsx
src/hooks/common/: index.ts  useApi.tsx  useAutostart.tsx  useDebounceSync.tsx  useNotification.tsx  useStore.tsx  useUpdate.tsx  useUpdater.tsx
src/hooks/shared/: useNotification.tsx
src/lib/: utils.ts
src/routes/: Config.tsx  Home.tsx  Logs.tsx
src/routes/auth/: Auth.tsx  Callback.tsx
src/routes/update/: Update.tsx
src/services/: client.ts  store.ts
src/services/client/: KeyloggerService.ts  OsService.ts  catbox.ts  commandService.ts  fileService.ts  index.ts  wsService.ts
src/shared/: env.config.ts
src/stores/: friends.store.ts  index.ts  sounds.store.ts  ws.store.ts
src/types/: auth.d.ts  index.d.ts  ws.d.ts
~/.tauri/: myapp.key  myapp.key.pub
