[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.3", features = [
    "devtools",
    "tray-icon",
    "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-websocket = "2"
rustls = "0.20"
rdev = { version = "0.5.0", features = ["serde"] }
rodio = "0.18.1"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
screenshots = "0.5.0"
base64 = "0.13"
tauri-plugin-shellx = "2.0.12"
enigo = "0.3.0"
tokio = { version = "1", features = ["full"] }
tauri-plugin-http = { version = "2", features = ["multipart"] }
tauri-plugin-fs = "2"
tauri-plugin-fs-pro = "2.3.0"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-system-info = "2.0.9"
tauri-plugin-prevent-default = "1.1"
tauri-plugin-oauth = "2"
tauri-plugin-upload = "2"
tauri-plugin-clipboard-manager = "2"


[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
