[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1",  features = [
    "devtools",
    "tray-icon",
    "image-png",
    ] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-store = "2"
tauri-plugin-http = { version = "2", features = ["multipart"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs-pro = "2.3.1"
tauri-plugin-fs = "2"
tauri-plugin-upload = "2"
tauri-plugin-os = "2"
tauri-plugin-system-info = "2.0.9"
tauri-plugin-shellx = "2.0.16"
screenshots = "0.5.0"
base64 = "0.13"
rdev = { version = "0.5.0", features = ["serde"] }
tauri-plugin-prevent-default = "1.3"

[dependencies.nokhwa]
version = "0.10"
# Use the native input backends, enable WGPU integration
features = ["input-native", "output-wgpu"]


# add this to enable exporting to a JPEG/PNG
[dependencies.image]
version = "0.25"
features = ["default-formats"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
