[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1",  features = [
    #"devtools", # Disabled in production
    "tray-icon",
    "image-png",
    ] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-store = "2"
tauri-plugin-http = { version = "2", features = ["multipart"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs-pro = "2.3.1"
tauri-plugin-fs = "2"
tauri-plugin-upload = "2"
tauri-plugin-os = "2"
tauri-plugin-system-info = "2.0.9"
tauri-plugin-shellx = "2.0.16"
screenshots = "0.5.0"
base64 = "0.13"
rdev = { version = "0.5.0", features = ["serde"] }
tauri-plugin-prevent-default = "1.3"
tauri-plugin-persisted-scope = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-stronghold = "2"
argon2 = "0.5"
tauri-plugin-process = "2"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
tauri-plugin-notification = "2"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
